@@ -38,3 +38,4 @@
            First test of Load Plugins from Library;
 27/06/2024 Changed IDigIt_Params.Summary params list; Added Flags in Plugin/Taker; Added function AllocPChar
 02/07/2024 Switched Taker Twain to interfaces; Added OnSet to IDigIt_Params interface
+03/07/2024 Porting of Twain Taker Completed; Taker_SelectWithParams calls IDigitParams.OnSet;
